--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "next": "15.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.60.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-inner-image-zoom": "^4.0.1",
+    "sweetalert2": "^11.22.2",
     "swiper": "^11.2.10",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2"
